objects/Account.object
<CustomObject>
    <fields>
        <fullName>tfn_Account_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Constituent_Types__c</fullName>
        <label>Constituent Type/s</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Major Donor</fullName>
                </value>
                <value>
                    <fullName>Conservation</fullName>
                </value>
                <value>
                    <fullName>Covenanting Related</fullName>
                    <isActive>false</isActive>
                    <label>Covenanting Related</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Contact for Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_RE_Constituent_ID__c</fullName>
        <label>RE Constituent ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_RE_Constituent_Import_ID__c</fullName>
        <label>RE Constituent Import ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>An Account representing an organization</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>